[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/HUD/Interface/TopMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/HUD/Interface/Commands/CommandConsole.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/fillBar.tres" type="StyleBox" id=3]
[ext_resource path="res://Assets/InterfaceStyle.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/bkBar.tres" type="StyleBox" id=5]
[ext_resource path="res://fonts/nasalization-rg.otf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 326 )

[sub_resource type="DynamicFont" id=4]
size = 15
font_data = ExtResource( 6 )

[node name="TopMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="StaticBody2D_left" type="StaticBody2D" parent="."]
position = Vector2( -47, 0 )
collision_layer = 10
collision_mask = 10
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D_left"]
position = Vector2( 45, 326 )
shape = SubResource( 3 )
disabled = true

[node name="CommandConsole" parent="." instance=ExtResource( 2 )]
anchor_top = 0.743
margin_top = -0.100037

[node name="ActualFunction" type="Label" parent="."]
anchor_left = 0.031
anchor_top = 0.918
anchor_right = 0.194
anchor_bottom = 0.949
margin_left = -0.300003
margin_top = 0.039978
margin_right = -0.200012
margin_bottom = -0.280029
custom_fonts/font = ExtResource( 4 )
text = "Funci√≥n Constante"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlMark" type="Control" parent="."]
anchor_top = 0.743
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 32.0401
margin_right = -970.0
margin_bottom = -7.99988
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life" type="Label" parent="ControlMark"]
anchor_left = 0.03
anchor_top = 0.194
anchor_right = 0.08
anchor_bottom = 0.299
margin_left = 10.7
margin_top = -18.13
margin_right = 46.2
margin_bottom = -11.355
custom_fonts/font = ExtResource( 4 )
text = "Energy:"

[node name="LifeBar" type="ProgressBar" parent="ControlMark/Life"]
margin_left = 120.0
margin_right = 270.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
custom_styles/fg = ExtResource( 3 )
custom_styles/bg = ExtResource( 5 )
value = 100.0

[node name="InformPosition" type="Label" parent="ControlMark"]
anchor_left = 0.03
anchor_top = 0.313
anchor_right = 0.097
anchor_bottom = 0.417
margin_left = 10.7
margin_top = -10.385
margin_right = 76.93
margin_bottom = -3.465
custom_fonts/font = ExtResource( 4 )
text = "Position: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberPosition" type="Label" parent="ControlMark/InformPosition"]
margin_left = 180.0
margin_right = 270.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2
valign = 1
max_lines_visible = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="Label" parent="ControlMark"]
anchor_left = 0.03
anchor_top = 0.431
anchor_right = 0.085
anchor_bottom = 0.536
margin_left = 10.7
margin_top = -2.495
margin_right = 60.65
margin_bottom = 4.28
custom_fonts/font = ExtResource( 4 )
text = "Speed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberSpeed" type="Label" parent="ControlMark/Speed"]
margin_left = 180.0
margin_right = 270.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 4 )
text = "60"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
